load(
  "@rules_rust//rust:defs.bzl",
  "rust_doc",
  "rust_doc_test",
  "rust_library",
  "rust_static_library",
  "rust_test",
)

load(
  "@crate_index//:defs.bzl",
  "all_crate_deps",
)

package(default_visibility = ["//visibility:public"])

# Must match package.version in Cargo.toml.
VERSION = "0.1.0"

SRCS = glob(["src/**/*.rs"])

# TODO: add features.
FEATURES = []

# Rust io-drivers library (i.e. libio_drivers.rlib).
rust_library(
  name = "io_drivers_rlib",
  crate_name = "io_drivers",
  version = VERSION,
  crate_features = FEATURES,
  srcs = SRCS,
  deps = all_crate_deps(),
)

# Static io-drivers library (i.e. libio_drivers.a).
rust_static_library(
  name = "io_drivers_a",
  version = VERSION,
  crate_features = FEATURES,
  srcs = SRCS,
  deps = all_crate_deps(),
)

# Unit tests.
rust_test(
  name = "io_drivers_unit_test",
  crate = ":io_drivers_rlib",
)

# Doc tests.
rust_doc_test(
  name = "io_drivers_doc_test",
  crate = ":io_drivers_rlib",
)

# Documentation.
rust_doc(
  name = "io_drivers_doc",
  crate = ":io_drivers_rlib",
)
