[package]
name = "io_drivers"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["client"] }
hyper-rustls = { version = "0.23" }
log = { version = "0.4", features = ["release_max_level_warn"] }
noun = { git = "https://github.com/mcevoypeter/noun.git", branch = "main", features = ["thread-safe"] }
rustls = { version = "0.20" }
tokio = { version = "1", features = ["io-std", "io-util"] }

[features]
default = ["multi-thread"]
multi-thread = ["tokio/rt-multi-thread"]

[lib]
crate-type = ["lib", "staticlib"]
