[package]
name = "io_drivers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
env_logger = "0.9"
hyper = { version = "0.14", features = ["client"], optional = true }
hyper-rustls = { version = "0.23", optional = true }
log = { version = "0.4", features = ["release_max_level_warn"] }
noun = { git = "https://github.com/mcevoypeter/noun.git", branch = "main", features = ["thread-safe"] }
rustls = { version = "0.20", optional = true }
tokio = { version = "1", features = ["io-std", "io-util", "rt-multi-thread"] }

[features]
default = ["filesystem", "http-client"]
filesystem = []
http-client = ["hyper", "hyper-rustls", "rustls"]
