# Add the external repositories for the Rust toolchain. For more, see:
# https://bazelbuild.github.io/rules_rust/.

load(
  "@bazel_tools//tools/build_defs/repo:http.bzl",
  "http_archive"
)

# To find additional information on this release or newer ones visit:
# https://github.com/bazelbuild/rules_rust/releases
http_archive(
      name = "rules_rust",
          sha256 = "7fb9b4fe1a6fb4341bdf7c623e619460ecc0f52d5061cc56abc750111fba8a87",
              urls = [
                        "https://mirror.bazel.build/github.com/bazelbuild/rules_rust/releases/download/0.7.0/rules_rust-v0.7.0.tar.gz",
                                "https://github.com/bazelbuild/rules_rust/releases/download/0.7.0/rules_rust-v0.7.0.tar.gz",
                                    ],
)

load(
  "@rules_rust//rust:repositories.bzl",
  "rules_rust_dependencies",
  "rust_register_toolchains",
)

rules_rust_dependencies()

# Must match package.edition in Cargo.toml.
rust_register_toolchains(edition = "2021")

load(
  "@rules_rust//crate_universe:repositories.bzl",
  "crate_universe_dependencies",
)

crate_universe_dependencies()

load(
  "@rules_rust//crate_universe:defs.bzl",
  "crate",
  "crates_repository",
)

# Dependencies. See `dependencies` in Cargo.toml.
crates_repository(
  name = "crate_index",
  cargo_lockfile = "//:Cargo.lock",
  manifests = ["//:Cargo.toml"],
)

load(
  "@crate_index//:defs.bzl",
  "crate_repositories",
)

crate_repositories()
